Upgrade steamworks from v1.22 to v1.60

--- a/rehlds/msvc/ReHLDS.vcxproj
+++ b/rehlds/msvc/ReHLDS.vcxproj
@@ -407,26 +407,45 @@
     <ClInclude Include="..\public\rehlds\pr_dlls.h" />
     <ClInclude Include="..\public\savegame_version.h" />
     <ClInclude Include="..\public\steam\isteamapps.h" />
-    <ClInclude Include="..\public\steam\isteambilling.h" />
     <ClInclude Include="..\public\steam\isteamclient.h" />
     <ClInclude Include="..\public\steam\isteamcontroller.h" />
+    <ClInclude Include="..\public\steam\isteamdualsense.h" />
     <ClInclude Include="..\public\steam\isteamfriends.h" />
+    <ClInclude Include="..\public\steam\isteamgamecoordinator.h" />
     <ClInclude Include="..\public\steam\isteamgameserver.h" />
     <ClInclude Include="..\public\steam\isteamgameserverstats.h" />
+    <ClInclude Include="..\public\steam\isteamhtmlsurface.h" />
     <ClInclude Include="..\public\steam\isteamhttp.h" />
+    <ClInclude Include="..\public\steam\isteaminput.h" />
+    <ClInclude Include="..\public\steam\isteaminventory.h" />
     <ClInclude Include="..\public\steam\isteammatchmaking.h" />
+    <ClInclude Include="..\public\steam\isteammusic.h" />
+    <ClInclude Include="..\public\steam\isteammusicremote.h" />
     <ClInclude Include="..\public\steam\isteamnetworking.h" />
+    <ClInclude Include="..\public\steam\isteamnetworkingmessages.h" />
+    <ClInclude Include="..\public\steam\isteamnetworkingsockets.h" />
+    <ClInclude Include="..\public\steam\isteamnetworkingutils.h" />
+    <ClInclude Include="..\public\steam\isteamparentalsettings.h" />
+    <ClInclude Include="..\public\steam\isteamremoteplay.h" />
     <ClInclude Include="..\public\steam\isteamremotestorage.h" />
     <ClInclude Include="..\public\steam\isteamscreenshots.h" />
-    <ClInclude Include="..\public\steam\isteamunifiedmessages.h" />
+    <ClInclude Include="..\public\steam\isteamtimeline.h" />
+    <ClInclude Include="..\public\steam\isteamugc.h" />
     <ClInclude Include="..\public\steam\isteamuser.h" />
     <ClInclude Include="..\public\steam\isteamuserstats.h" />
     <ClInclude Include="..\public\steam\isteamutils.h" />
+    <ClInclude Include="..\public\steam\isteamvideo.h" />
     <ClInclude Include="..\public\steam\matchmakingtypes.h" />
     <ClInclude Include="..\public\steam\steamclientpublic.h" />
     <ClInclude Include="..\public\steam\steamhttpenums.h" />
+    <ClInclude Include="..\public\steam\steamnetworkingfakeip.h" />
+    <ClInclude Include="..\public\steam\steamnetworkingtypes.h" />
     <ClInclude Include="..\public\steam\steamtypes.h" />
+    <ClInclude Include="..\public\steam\steamuniverse.h" />
     <ClInclude Include="..\public\steam\steam_api.h" />
+    <ClInclude Include="..\public\steam\steam_api_common.h" />
+    <ClInclude Include="..\public\steam\steam_api_flat.h" />
+    <ClInclude Include="..\public\steam\steam_api_internal.h" />
     <ClInclude Include="..\public\steam\steam_gameserver.h" />
     <ClInclude Include="..\public\string_t.h" />
     <ClInclude Include="..\public\strtools.h" />
