--- a/rehlds/msvc/ReHLDS.vcxproj
+++ b/rehlds/msvc/ReHLDS.vcxproj
@@ -140,6 +140,7 @@
     </ClCompile>
     <ClCompile Include="..\rehlds\RehldsRuntimeConfig.cpp" />
     <ClCompile Include="..\rehlds\rehlds_security.cpp" />
+    <ClCompile Include="..\rehlds\steam_adapter\gameserver011.cpp" />
     <ClCompile Include="..\rehlds\structSizeCheck.cpp" />
     <ClCompile Include="..\testsuite\anonymizer.cpp" />
     <ClCompile Include="..\testsuite\funccalls.cpp" />
@@ -413,6 +414,7 @@
     <ClInclude Include="..\public\steam\isteamfriends.h" />
     <ClInclude Include="..\public\steam\isteamgamecoordinator.h" />
     <ClInclude Include="..\public\steam\isteamgameserver.h" />
+    <ClInclude Include="..\public\steam\isteamgameserver011.h" />
     <ClInclude Include="..\public\steam\isteamgameserverstats.h" />
     <ClInclude Include="..\public\steam\isteamhtmlsurface.h" />
     <ClInclude Include="..\public\steam\isteamhttp.h" />
@@ -467,6 +469,7 @@
     <ClInclude Include="..\rehlds\rehlds_api_impl.h" />
     <ClInclude Include="..\rehlds\rehlds_interfaces_impl.h" />
     <ClInclude Include="..\rehlds\rehlds_security.h" />
+    <ClInclude Include="..\rehlds\steam_adapter\gameserver011.h" />
     <ClInclude Include="..\testsuite\anonymizer.h" />
     <ClInclude Include="..\testsuite\funccalls.h" />
     <ClInclude Include="..\testsuite\memory.h" />
