Makefiles: no strict aliasing, no strict overflow
Modern GCC no longer use these as default which will lead to bugs caused
by wrong optimizations

--- a/rehlds/CMakeLists.txt
+++ b/rehlds/CMakeLists.txt
@@ -33,7 +33,7 @@ set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "")
 set(COMPILE_FLAGS "-m32 -fno-pic -fno-pie -U_FORTIFY_SOURCE")
 set(LINK_FLAGS "-m32 -no-pie -Wl,--no-export-dynamic")
 
-set(COMPILE_FLAGS "${COMPILE_FLAGS} -Wall -fno-rtti -fno-exceptions")
+set(COMPILE_FLAGS "${COMPILE_FLAGS} -Wall -fno-rtti -fno-exceptions -fno-strict-aliasing -fno-strict-overflow")
 
 # Remove noxref code and data
 set(COMPILE_FLAGS "${COMPILE_FLAGS} -ffunction-sections -fdata-sections")
