--- a/rehlds/filesystem/FileSystem_Stdio/CMakeLists.txt
+++ b/rehlds/filesystem/FileSystem_Stdio/CMakeLists.txt
@@ -12,7 +12,7 @@ set(CMAKE_SHARED_LIBRARY_CXX_FLAGS "")
 set(COMPILE_FLAGS "-m32 -fno-pic -U_FORTIFY_SOURCE")
 set(LINK_FLAGS "-m32")
 
-set(COMPILE_FLAGS "${COMPILE_FLAGS} -Wall -fno-exceptions")
+set(COMPILE_FLAGS "${COMPILE_FLAGS} -Wall -fno-exceptions -fno-strict-aliasing -fno-strict-overflow")
 
 if (DEBUG)
 	set(COMPILE_FLAGS "${COMPILE_FLAGS} -g3 -O3 -ggdb")
